# customer/src/main/java/hu/oe/yokudlela/customer/generated/entity/Customer.java
@@ -1,49 +1,0 @@
-package hu.oe.yokudlela.customer.generated.entity;
-// Generated by Hibernate Tools 6.6.8.Final
-
-
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
-import java.util.UUID;
-
-
-            @lombok.Builder @lombok.AllArgsConstructor @lombok.NoArgsConstructor @lombok.Getter @lombok.Setter
-        @Entity
-        @Table(name="customer"
-)
-public class Customer  implements java.io.Serializable {
-
-
-        
-                @jakarta.persistence.GeneratedValue(generator = "uuid-hibernate-generator")
-            
-                @Id 
-
-           
-           @Column(name="id", unique=true, nullable=false)
-
-    private UUID id;
-    public static final String FIELD_ID="id";
-        
-
-           
-           @Column(name="name", nullable=false, length=255)
-
-    private String name;
-    public static final String FIELD_NAME="name";
-        
-
-           
-           @Column(name="description")
-
-    private String description;
-    public static final String FIELD_DESCRIPTION="description";
-
-
-
-
-
-    }
